# colormusic

./: Cargo.toml  README.md  config.json  devices.txt
arduino/: sketch.ino
firmware/: ColorConversion.cpp  ColorConversion.h  ColorInterpolation.cpp  ColorInterpolation.h  Colormusic.cpp  Colormusic.h  esp32.ino  sketch.ino  uno.ino
src/: app_input.rs  audio.rs  audio_listener.rs  bluetooth.rs  colorizer.rs  colors.rs  commands.rs  config.rs  devices.rs  events.rs  main.rs  math.rs  shared.rs  spectrum.rs  splitter.rs  timer.rs
